--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -6,6 +6,9 @@
 
 body {
     margin: 0;
+    font-family: $main-font;
+    font-size: $font-size;
+    color: $text-color;
 }
 
 h1, h2, h3, h4, h5, h6, p, ul {
@@ -22,3 +25,13 @@ ul {
     list-style-type: none;
 }
 
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+svg {
+    max-width: 100%;
+    max-height: 100%;
+}
