--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -35,3 +35,16 @@ svg {
     max-width: 100%;
     max-height: 100%;
 }
+
+.button {
+    display: block;
+    padding: 15px 49px;
+    border: 1px solid #6C944E;
+    border-top-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+    font-size: 14px;
+    line-height: 2.01;
+    text-align: center;
+    color: #588535;
+    background-color: transparent;
+}
